--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,10 +4,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Judo Heroes - A Universal JavaScript demo application with React</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&amp;subset=vietnamese" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
   </head>
   <body>
     <div id="main"><%- markup -%></div>
     <script src="/js/bundle.js"></script>
+    <style>
+      * {
+        font-family: 'Open Sans', sans-serif;
+      }
+    </style>
   </body>
 </html>
